# oblivion

./: .gitignore  README.md  config.yaml  docker-compose.yaml  example.ipynb  main.py  pyproject.toml  research.ipynb  synth.ipynb  test.ipynb
prompt_injection/: attacks.py  dialoggen.py  generator.py  main.py  prompts.py  utils.py
pybook/: data_synthesis.ipynb  example.ipynb  gen_synthesis.ipynb  research.ipynb  stage_1.ipynb  train_stage_1.ipynb
pybook/memory/: test.ipynb  test_.ipynb
trash/: research.ipynb
vllm_service/: run.py
workflow/: prompts.py
workflow/generator/: dialoggen.py  generator.py  main.py  prompts.py  tokenizer.py
workflow/pipeline/: engine.py  utils.py
workflow/pipeline/graph/: binary_graph.py  state.py
workflow/pipeline/graph/llms/: _base.py  llama.py
workflow/pipeline/graph/nodes/: __init__.py  _base.py
workflow/pipeline/graph/nodes/answer_node/: answer_node.py
workflow/pipeline/graph/nodes/classifier_node/: classifier_node.py  prompt.py
workflow/pipeline/graph/nodes/classifier_router/: classifier_router.py
workflow/pipeline/graph/nodes/duplicate_node/: duplicate_node.py
workflow/pipeline/graph/nodes/generate_injection_node/: generate_injection_node.py  prompt.py
workflow/pipeline/graph/nodes/generate_query_node/: generate_query_node.py  prompt.py
workflow/pipeline/graph/nodes/masking_node/: masking_node.py  prompt.py
workflow/pipeline/graph/nodes/paraphrase_or_finish_router/: paraphrase_or_finish_router.py
workflow/pipeline/graph/nodes/paraphrasing_node/: paraphrasing_node.py  prompt.py
workflow/vllm_service/: openai_client.py  run.py
