[tool.poetry]
name = "oblivion"
version = "0.1.0"
description = "Project Oblivion: Inducing Controlled Hallucinations in AI Models"
authors = ["r1char9"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.4"
transformers = "^4.49.0"
datasets = "^3.4.1"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
